--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "workspace",
-  "version": "0.0.0",
+  "name": "ferry-tracker2",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -13,7 +13,6 @@
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.10",
-    "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
