--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cookie-parser": "~1.4.3",
     "cron": "^1.3.0",
     "debug": "~2.6.9",
+    "es6-promise": "^4.2.4",
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.10",
+    "isomorphic-fetch": "^2.2.1",
+    "monk": "^6.0.5",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "table-scraper": "^0.1.0"
