--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "es6-promise": "^4.2.4",
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
-    "handlebars": "^4.0.10",
+    "handlebars": "^4.0.11",
     "isomorphic-fetch": "^2.2.1",
     "monk": "^6.0.5",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
+    "sqlite3": "^4.0.0",
     "table-scraper": "^0.1.0"
   }
 }
