--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "create-react-app": "^1.5.2",
     "cron": "^1.3.0",
+    "date-fns": "^1.29.0",
     "debug": "~2.6.9",
     "es6-promise": "^4.2.4",
     "express": "~4.15.5",
