--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "create-react-app": "^1.5.2",
     "cron": "^1.3.0",
@@ -19,13 +20,17 @@
     "isomorphic-fetch": "^2.2.1",
     "monk": "^6.0.6",
     "morgan": "~1.9.0",
-    "npm": "^6.0.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "sequelize": "^4.37.7",
+    "npm": "^6.1.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "sequelize": "^4.37.10",
     "serve-favicon": "~2.4.5",
-    "sqlite": "^2.9.1",
+    "sqlite": "^2.9.2",
     "sqlite3": "^4.0.0",
     "table-scraper": "^0.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
