--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "date-fns": "^1.29.0",
     "debug": "~2.6.9",
     "es6-promise": "^4.2.4",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
     "isomorphic-fetch": "^2.2.1",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "mocha": "^5.2.0"
   }
 }
