--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
     "isomorphic-fetch": "^2.2.1",
+    "knex": "^0.14.6",
     "monk": "^6.0.6",
     "morgan": "~1.9.0",
     "npm": "^6.1.0",
+    "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "sequelize": "^4.37.10",
