--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "create-react-app": "^1.5.2",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.0",
     "npm": "^6.1.0",
     "pg": "^7.4.3",
+    "pg-promise": "^8.4.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "sequelize": "^4.37.10",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "pg-monitor": "^1.0.0"
   }
 }
