--- a/package.json
+++ b/package.json
@@ -19,18 +19,14 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
     "isomorphic-fetch": "^2.2.1",
-    "knex": "^0.14.6",
-    "monk": "^6.0.6",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.1.2",
     "npm": "^6.1.0",
     "pg": "^7.4.3",
     "pg-promise": "^8.4.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "sequelize": "^4.37.10",
     "serve-favicon": "~2.4.5",
-    "sqlite": "^2.9.2",
-    "sqlite3": "^4.0.0",
     "table-scraper": "^0.1.0"
   },
   "devDependencies": {
