--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^2.0.0-rc.0",
+    "apollo-server": "^2.0.0-rc.0",
+    "apollo-server-express": "^2.0.0-rc.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
@@ -16,7 +19,9 @@
     "debug": "~2.6.9",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "express-handlebars": "^3.0.0",
+    "graphql": "^0.13.2",
     "handlebars": "^4.0.11",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "~1.9.0",
