--- a/scraper/package.json
+++ b/scraper/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "graphql-request": "^1.8.2",
     "mongoose": "^5.2.13",
     "node-fetch": "^2.2.0",
     "table-scraper": "^0.1.0"
