--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "eslint-plugin-jest": "^21.22.1",
     "graphql-request": "^1.8.2",
     "mongoose": "^5.2.13",
     "node-fetch": "^2.2.0",
     "table-scraper": "^0.1.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
