--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "jest",
+    "start": "node index.js",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.2",
     "apollo-server-koa": "^2.0.0-rc.12",
     "graphql": "^14.0.2",
     "koa": "^2.5.3",
+    "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.2.17"
+    "micro": "latest",
+    "mongoose": "^5.2.17",
+    "npm": "^6.4.1"
   }
 }
