--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,15 @@
     "koa-router": "^7.4.0",
     "micro": "latest",
     "mongoose": "^5.2.17",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
+    "graphql-request": "^1.8.2",
+    "node-fetch": "^2.2.0",
+    "table-scraper": "^0.1.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "eslint-plugin-jest": "^21.22.1"
   }
 }
