--- a/package.json
+++ b/package.json
@@ -1,49 +1,18 @@
 {
-  "name": "ferry-tracker2",
-  "version": "0.0.1",
-  "private": true,
+  "name": "client-next",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "dev": "next",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "apollo-datasource-rest": "^2.0.0-rc.0",
-    "apollo-server": "^2.0.0-rc.0",
-    "apollo-server-express": "^2.0.0-rc.0",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
-    "create-react-app": "^1.5.2",
-    "cron": "^1.3.0",
-    "date-fns": "^1.29.0",
-    "debug": "~2.6.9",
-    "es6-promise": "^4.2.4",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "express-handlebars": "^3.0.0",
-    "graphql": "^0.13.2",
-    "handlebars": "^4.0.11",
-    "isomorphic-fetch": "^2.2.1",
-    "morgan": "~1.9.0",
-    "node-fetch": "^2.1.2",
-    "npm": "^6.1.0",
-    "pg": "^7.4.3",
-    "pg-promise": "^8.4.4",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "serve-favicon": "~2.4.5",
-    "table-scraper": "^0.1.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "jest": "^23.6.0",
-    "mocha": "^5.2.0",
-    "pg-monitor": "^1.0.0"
+    "next": "^6.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
