--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql-request": "^1.8.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^6.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
