--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^1.29.0",
     "graphql-request": "^1.8.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^6.1.1",
