--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3030",
+    "dev": "next",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "next build",
     "export": "npm run build && next export",
