--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react-hooks": "^0.0.0",
     "gatsby": "^2.0.67",
     "gatsby-image": "^2.0.25",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-offline": "^2.0.19",
     "gatsby-plugin-react-helmet": "^3.0.2",
