--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "react-dom": "16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.6.0",
+    "react-motion": "^0.5.2",
+    "react-spring": "^7.1.3",
     "react-test-renderer": "^16.7.0-alpha.2"
   },
   "keywords": [
