--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-source-graphql": "^2.0.7",
     "gatsby-transformer-sharp": "^2.1.8",
+    "localforage": "^1.7.3",
     "prop-types": "^15.6.2",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
