--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,1 @@
-DB_USER = scraper2
-DB_PASS = sfudean1
-ENDPOINT = http://localhost:4000/graphql
+ENDPOINT = https://ferry-time.herokuapp.com/v1alpha1/graphql
