--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^2.2.2",
-    "apollo-server-koa": "^2.0.0-rc.12",
-    "axios": "^0.18.0",
+    "apollo-boost": "^0.1.28",
+    "apollo-cache-inmemory": "^1.4.3",
+    "apollo-client": "^2.4.13",
+    "apollo-link-http": "^1.5.11",
     "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "graphql": "^14.0.2",
     "graphql-request": "^1.8.2",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.5.3",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
@@ -26,7 +29,6 @@
     "micro": "latest",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "mongoose": "^5.2.17",
     "node-fetch": "^2.2.0",
     "npm": "^6.4.1",
     "table-scraper": "^0.1.0"
