--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
   "version": "0.2.0",
   "configurations": [
 
+
     {
       "type": "node",
       "request": "launch",
@@ -16,6 +17,12 @@
       "request": "launch",
       "name": "Scrape",
       "program": "${workspaceFolder}/scraper/index.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Merged",
+      "program": "${workspaceFolder}/scraper/merged.js"
     }
   ]
 }
