--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "apollo-cache-inmemory": "^1.4.3",
     "apollo-client": "^2.4.13",
     "apollo-link-http": "^1.5.11",
+    "cheerio": "^1.0.0-rc.2",
     "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "graphql": "^14.0.2",
@@ -30,6 +31,8 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "npm": "^6.4.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "table-scraper": "^0.1.0"
   },
   "devDependencies": {
