--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -4,7 +4,8 @@
     "mount:js": "mount src/js --to /_dist_",
     "build:css": "postcss",
     "run:11ty": "eleventy",
-    "run:11ty::watch": "$1 --watch"
+    "run:11ty::watch": "$1 --watch",
+    "bundle:*": "@snowpack/plugin-parcel"
   },
   "plugins": ["@snowpack/plugin-parcel"],
   "installOptions": {
