--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "date-fns": "^2.15.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
